<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see https://lanDenLabs.com/
  -->

<resources>
    <string name="app_name">all AudioDemo</string>
    <string name="large_text">  Hello  </string>
    <string name="menu_about">About</string>
    <string name="main_title">1. Select sound\n2. Press button to play sound</string>
    <string name="notify_fg">Notify Fg</string>
    <string name="notify_bg">Notify Bg</string>
    <string name="raw">Raw</string>
    <string name="asset">Asset</string>
    <string name="network">Network</string>
    <string name="default_sound">alert_air_horn</string>
</resources>
